--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -5,10 +5,17 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Global Drivers Alliance</span>
+                        <span class="name">Do you drive for Uber?</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>You are an integral part of us-the thousands of drivers in  over 54 countries  who make sacrifices and risk their livelihoods everyday, to build Uber into the company that it is today.  How has Uber has repaid us? by attacking our incomes, micromanaging every aspect of our work, and flooding the market even while throwing many devoted drivers off the platform. We therefore propose forming an independent organization of drivers to hold Uber true to its original vision and to protect our work and lives – an organization run exclusively and democratically by drivers from every Uber city in the world.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>We know that every Uber driver has already thought of this. On this site, we are merely trying to gather everyone together so we can then formally unite in a democratic, transparent and orderly fashion. No outside organization or union is involved in this effort. And we – the drivers you see below – are not putting ourselves up as leaders. Leaders must be chosen democratically by Uber drivers. We are simply proposing a process to get things started. We hope you will join us.</p>
                 </div>
             </div>
         </div>
