--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -3,48 +3,44 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Here are our proposals</h2>
+                    <h2>STEP 1: Sign Up</h2>
                     <hr class="star-primary">
                 </div>
+            </div>
+            <div class="row" id="signUpFormContainer">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p>STEP 1: Sign up. 100% confidential. No one will know you signed up. You are not committing to anything by signing up, you are simply saying that you want to hear more about this effort.</p>
+                    <p>100% confidential. No one will know you signed up. You are not committing to anything by signing up, you are simply saying that you want to hear more about this effort.</p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    {{#autoForm collection="Signees" id="signUpForm" type="insert"}}
+                        {{> afQuickField name="mobile" options="auto"}}
+                        {{> afQuickField name="carType" options="auto"}}
+                        {{> afQuickField name="city" options="auto"}}
+                        {{> afQuickField name="email" options="auto"}}
+                        {{> afQuickField name="name" options="auto"}}
+                        {{> afQuickField name="languagePreference" options="auto"}}
+                        <div>
+                            <button type="submit">Sign Up</button>
+                        </div>
+                    {{/autoForm}}
+                    <!--{{#each signees}}-->
+                        <!--<p>{{name}} ({{mobile}})</p>-->
+                    <!--{{/each}}-->
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="moreAboutMeFormContainer">
                 <div class="col-lg-8 col-lg-offset-2">
-                    {{#autoForm collection="Signees" id="afInsertDemo" type="insert"}}
-                    {{#each afFieldNames}}
-                    {{> afQuickField name=this options="auto"}}
-                    {{/each}}
+                    <p>Thanks for signing up! We will appreciate if you can tell us more about yourself. (This is
+                       totally optional. Feel free to skip it.)</p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2">
+                    {{#autoForm collection="Signees" id="moreAboutMeForm" type="update"}}
+                    {{> afQuickField name="postalCode" options="auto"}}
+                    {{> afQuickField name="startYear" options="auto"}}
                     <div>
-                        <button type="submit">Sign Up</button>
+                        <button type="submit">Submit</button>
                     </div>
                     {{/autoForm}}
-                <!--<div class="form-group {{#if afFieldIsInvalid name='mobile'}}has-error{{/if}}">-->
-                    <!--<label class="control-label">{{afFieldLabelText name='mobile'}}</label>-->
-                    <!--{{> afFieldInput name='mobile'}}-->
-                    <!--{{#if afFieldIsInvalid name='mobile'}}-->
-                    <!--<span class="help-block">{{{afFieldMessage name='mobile'}}}</span>-->
-                    <!--{{/if}}-->
-                <!--</div>-->
-                <!--<div class="form-group {{#if afFieldIsInvalid name='city'}}has-error{{/if}}">-->
-                    <!--<label class="control-label">{{afFieldLabelText name='city'}}</label>-->
-                    <!--{{> afFieldInput name='city'}}-->
-                    <!--{{#if afFieldIsInvalid name='city'}}-->
-                    <!--<span class="help-block">{{{afFieldMessage name='city'}}}</span>-->
-                    <!--{{/if}}-->
-                <!--</div>-->
-                <!--<div class="form-group {{#if afFieldIsInvalid name='age'}}has-error{{/if}}">-->
-                    <!--<label class="control-label">{{afFieldLabelText name='age'}}</label>-->
-                    <!--{{> afFieldInput name='age'}}-->
-                    <!--{{#if afFieldIsInvalid name='age'}}-->
-                    <!--<span class="help-block">{{{afFieldMessage name='age'}}}</span>-->
-                    <!--{{/if}}-->
-                <!--</div>-->
-                <!--<div class="form-group">-->
-                    <!--<button type="submit" class="btn btn-primary">Add Person</button>-->
-                    <!--<button type="reset" class="btn btn-default">Reset Form</button>-->
-                <!--</div>-->
                 </div>
             </div>
         </div>
