navigate across sections

--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -42,6 +42,7 @@
                     {{> afQuickField name="otherLanguages" options="auto"}}
                     <div>
                         <button type="submit">Submit</button>
+                        <button id="skipMoreAboutMe">Skip</button>
                     </div>
                     {{/autoForm}}
                 </div>
