nominate and suggest forms

--- a/client/css/freelancer.css
+++ b/client/css/freelancer.css
@@ -188,6 +188,10 @@ section.success {
     background: #18bc9c;
 }
 
+section.success button {
+    color: #2c3e50;
+}
+
 @media(max-width:767px) {
     section {
         padding: 75px 0;
