--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Do you drive for Uber?</span>
+                        <span class="name">Drive for Uber?</span>
                         <hr class="star-light">
                     </div>
                 </div>
