--- a/client/templates/suggest.html
+++ b/client/templates/suggest.html
@@ -19,7 +19,8 @@
                     {{> afQuickField name="email" options="auto"}}
                     {{> afQuickField name="city" options="auto"}}
                     <div>
-                        <button type="submit">Suggest</button>
+                        <button type="submit" class="btn btn-primary">Suggest</button>
+                        <span class="btn btn-default" onclick="scrollToSection('spread')">Skip</span>
                     </div>
                     {{/autoForm}}
                 </div>
