--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>xx xxxx Street<br>xxxx xxxxx, XX xxxxx</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -29,8 +29,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About GDA</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras imperdiet ipsum et elit hendrerit, ac laoreet nulla dictum.</p>
                     </div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
+                        Copyright &copy; GDA 2015
                     </div>
                 </div>
             </div>
