--- a/client/templates/nominate.html
+++ b/client/templates/nominate.html
@@ -14,6 +14,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     {{#autoForm collection="Introductions" id="nominateForm" type="insert"}}
                     {{> afQuickField name="type" type="hidden" value="nominate" label=" "}}
+                    <span id="nominateMyself" class="btn btn-primary">I Nominate Myself</span>
                     {{> afQuickField name="name" options="auto"}}
                     {{> afQuickField name="mobile" options="auto"}}
                     {{> afQuickField name="email" options="auto"}}
