translation for navbar and header

--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Global Drivers Alliance</a>
+                <a class="navbar-brand" href="#page-top">{{i18n "site.name"}}</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,16 +21,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#why">Why?</a>
+                        <a href="#why">{{i18n "nav.why"}}</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#who">Who’s behind?</a>
+                        <a href="#who">{{i18n "nav.who"}}</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#how-to-help">How customers can help?</a>
+                        <a href="#how-to-help">{{i18n "nav.how_to_help"}}</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">{{i18n "nav.contact"}}</a>
                     </li>
                 </ul>
             </div>
